# uxsdcxx

./: .gitignore  .gitmodules  .travis.yml  README.md  dfa.py  requirements.txt  setup.cfg  setup.py  test_rr_graph_reader_interface_capnp_to_capnp.cpp  test_rr_graph_reader_interface_to_capnp.cpp  uxsdcap.py  uxsdcxx.py
docs/: conf.py  index.rst
tests/: Makefile  catalog.xml  catalog.xsd  catalog_driver.cpp  hello.xml  hello.xsd  hello_driver.cpp  mixin.xml  mixin_driver.cpp  orange.xml  orange.xsd  orange_driver.cpp
uxsdcxx/: __init__.py  capnp.py  capnp_templates.py  cpp.py  cpp_templates.py  dfa.py  main.py  schema.py  templates.py  utils.py
