[metadata]
name = uxsdcxx
version = attr: uxsdcxx.__version__
license = Apache-2.0
license_file = LICENSE
description = generate C++ reader/writer from XSD schema
long_description = file: README.md
author = duck2
author_email = duck2@protonmail.com
url = https://github.com/SymbiFlow/uxsdcxx
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
install_requires=
	xmlschema == 1.0.11
	automata-lib == 3.1.0.post1

python_requires = >=3.6

packages = uxsdcxx

[options.entry_points]
console_scripts =
	uxsdcxx = uxsdcxx.main:uxsdcxx
	uxsdcap = uxsdcxx.main:uxsdcap


[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True
check_untyped_defs = True

# disallow_any_generics = True
# disallow_incomplete_defs = True
# disallow_untyped_defs = True
# no_implicit_optional = True
warn_unused_ignores = True

files = uxsdcxx/*.py

[mypy-uxsdcxx.third_party.DFA]
ignore_errors = True


[flake8]
ignore =
	# W191 indentation contains tabs
	W191
exclude = env, build, dist, __pycache__, setup.py, tests
